# arquitetura_dream

./: README.md  arquiteto_final.py  delete.md  dream_cache.json  frontend.html  pyproject.toml  requirements.txt  server.py
processo_aprendizado/: arc1d.py  arquiteto.py  arquiteto2.py  arquiteto3.py  arquiteto4.py  arquiteto5.py  arquiteto6.py  arquiteto7.py  codigo1.ipynb  codigo2.ipynb  dream.py  dream_with10.py  evolucaoDREAM(arquiteto).md  main1.py  main2.py  mapaAGI.md  proposta.md  resultadotestehanoi.md  testehanoi.py  testehanoi2.py
