[project]
name = "paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "networkx>=3.5",
    "openai>=1.93.1",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]
